--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -1,13 +1,25 @@
+#主数据
 PI.MasterData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_MasterDataQuery&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3AMasterData
+#业务数据
+PI.BusinessData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_BusinessData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
+#会员创建 / 订户维护
+PI.VipInfoData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_CRM_BuData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
+#积分余额
+PI.VipPointData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=PointQuery_Out&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
+#积分明细
+PI.VipDetialData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=PTDetailQuery_Out&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
+#会员活动创建
+PI.MemberActCreate.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=MemberActCreate&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
+#会员地址更新
+PI.MemberAddrUpdate.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=MemberAddrUpdate&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
+
 PI.MasterData.USERNAME = ZT_CONN
 PI.MasterData.PASSWORD = CANDYTOZT
 PI.MasterData.mATQUERY.SIGN = I
 PI.MasterData.mATQUERY.OPTION.EQ = EQ
 PI.MasterData.mATQUERY.OPTION.BT = BT
 PI.MasterData.mATQUERY.LOW = Z005
-
 PI.MasterData.mATQUERY.ZORM = ZORM
-
 PI.MasterData.mATQUERY.VKORG = 13
 #产品层次
 PI.PRODH = 20
@@ -18,24 +30,17 @@ PI.AUART.ZOR1 = ZOR1
 PI.AUART.ZFD = ZFD
 PI.AUART.ZFD1 = ZFD1
 PI.SALEORG_TX = 4181
-
 PI.AUGRU = Z07
 PI.ZZ001 = 40
-
-PI.BusinessData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_BusinessData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
-PI.VipInfoData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_CRM_BuData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
-PI.VipPointData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=PointQuery_Out&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
-PI.VipDetialData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=PTDetailQuery_Out&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
-
 PI.MESSAGE.FLAG.OK = S
 PI.MESSAGE.FLAG.ERROR = E
-#获取交货单日期，川乳和
-PI.SALESORG =
-
+#短信
 SMS.URL = https://smsapi.ums86.com:9600/sms_hb/services/Sms?wsdl
 SMS.SpCode = 228672
 SMS.LoginName = sc_xhry
 SMS.Password = ry85953221.com
+#是否调用CRM接口
+PI.CRM.EXEC = no
 
 
 
